# etc

./: .gitignore  .gitmodules  Brewfile  README  alias  bash_completion  bash_functions  bashrc  dir_colors  env_manager.json  env_manager.py  gitconfig  gitignore_global  httpd.conf  iftoprc  inputrc  karabiner.xml  ntes  pycodestyle  pylintrc  pythonrc  snape.json  subversion.config  sudoers  supervisord.conf  tmux.conf
aria2/: aria2.conf
atuin/: config.toml
aws/: config
bin.disabled/: dnsd.py  gftp  proxy  vpn
bootstrap/: init.sh  macos.sh  opensuse.sh  stage1.sh
cron/: cleanssh.sh  crontab  crontab.root  online.sh  update_repo.sh
doc/: init.md
fish/: aliases.fish  config.fish  fishfile
fzf/: key-binding.sh
git-hooks/: pre-commit
go/: .manage  go.mod  go.sum  my_prompt.go  mypwd.go  ps1.go
hammerspoon/: hiper.lua  hyperex.lua  init.lua  is_switch.lua  magnet.lua  power.lua
httpd/: blog
iterm/: rename_tab.scpt
karabiner/: karabiner.json
kitty/: Linux.conf  base16_solarized_dark.color.conf  kitty.conf  macos.conf  nightfox.color.conf  obsidian.color.conf
linux/: xbindkeysrc
machines/: sbet.json
murmur/: Cargo.toml  README.md
murmur/src/: cache.rs  chunking.rs  client.rs  docker.rs  lib.rs  main.rs  python_server.rs  transcription.rs  utils.rs  voice_recorder.rs
newsbeuter/: config  urls
newsboat/: config  urls
nvim/: .luarc.json  .manage  init.lua  init.vim  lazy-lock.json
ps1/: .manage  Cargo.toml
ptpython/: config.py
screen-saver/: README.md  go.mod  go.sum
vagrant/: Vagrantfile
vhosts/: album  blog
vim/: colors  (+1 more)
(+71 files in other folders)
