[package]
name = "murmur"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"
env_logger = "0.11"
cpal = "0.15"
hound = "3.5"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.0"
